# util-collections

harbor-hook-to-mail/: README.md  build.sh  config.yaml  go.mod  go.sum  main.go  stats.json
harbor-hook-to-mail/config/: audit_config.go  mail_config.go  registry_config.go
harbor-hook-to-mail/handlers/: image_handler.go  mail_handler.go
harbor-hook-to-mail/routes/: webhook.go
harbor-hook-to-mail/tests/: encrypt_test.go  mail_test.go  webhook_test.go
harbor-hook-to-mail/utils/: cipher.go  docker_util.go  mail.go
helm-template-good-practise/: Chart.yaml  README.md  values.yaml
helm-template-good-practise/charts/app/: Chart.yaml
helm-template-good-practise/charts/app-template/: Chart.yaml
minio-preview/minio_reader/: Cargo.toml
minio-preview/minio_reader/src/: main.rs
minio_reader/: Cargo.toml  minio_reader.sh
minio_reader/src/: main.rs
oci-incre-image/: README.md
oci-incre-image/go/: build.sh  go.mod  go.sum  oci_incre.go
oci-incre-image/shell/: oci_incre_image.sh
safe-input/: .gitignore  README.md  build.sh  go.mod  go.sum  main.go
safe-input/client/: minio_client.go  mysql_client.go  redis_client.go
safe-input/client/cmd/: actions.go
safe-input/client/cmd/minio/: cat.go  cp.go  find.go  (+9 more)
safe-input/qrcode/: generate_qrcode.go  validate_qrcode.go
tag-validate-webhook/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
tag-validate-webhook/manifests/: configmap.yaml  deployment.yaml  sa.yaml  secret.yaml  service.yaml  webhook.yaml
transfer-station/: README.md  go.mod  main.go  transfer-station
(+11 files in other folders)
