[package]
name = "minio_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
futures-util = "0.3"
